[package]
name = "tdtxt"
version = "0.1.0"
authors = ["Shemnei"]
edition = "2018"
description = "A serializer/deserializer for the todo.txt format"
documentation = "https://github.com/Shemnei/tdtxt"
homepage = "https://github.com/Shemnei/tdtxt"
repository = "https://github.com/Shemnei/tdtxt"
license= "Unlicense"
exclude = ["/Makefile", "/.git/", "/.github/"]
keywords = ["todotxt", "todo", "todo-txt", "parser"]

[dependencies]
chrono = { version = "0.4.19", optional = true }
serde = { version = "1.0.117", features = ["derive"], optional = true }

[features]
default = []
all = ["chrono", "serde"]

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
opt-level = 3
# Reduces parallel code generation units to increase optimizations
codegen-units = 1

[dev-dependencies]
pretty_assertions = "0.7.2"
